# instruct-easy__examples

./: .gitignore  README.md  README.org  pyproject.toml
file_writer_output/: README.md  package.json  yCombinator.js  y_combinator.js  y_combinator.lisp  y_combinator.nim  y_combinator.nimble  y_combinator.py  y_combinator.rb  y_combinator.rkt  y_combinator.scm  ycombinator.nim  ycombinator.nimble
src/instruct_easy_examples/: __init__.py  decorators_composition.py  file_writer.py  pizza_ordering.py
src/instruct_easy_examples/file_writer_output/: README.md  __init__.py  package.json  requirements.txt  yCombinator.js  y_combinator.js  y_combinator.lisp  y_combinator.py  y_combinator.rb
