[project]
name = "instruct-easy-examples"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "outcastgeek", email = "outcastgeek+gitkraken@gmail.com" }
]
dependencies = [
    "instruct-easy @ git+https://github.com/chiefkemist/instruct-easy",
    "httpx>=0.27.0",
    "playwright>=1.45.0",
    "rich>=13.7.1",
]
#readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.5.1",
]

[tool.rye.scripts]
decorators_comp = "rye run python src/instruct_easy_examples/decorators_composition.py"
pizza_ordering = "rye run python src/instruct_easy_examples/pizza_ordering.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/instruct_easy_examples"]
